--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 
 <main class="s-main">
 
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
     
 </main>
 
