--- a/index.html
+++ b/index.html
@@ -3,16 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/style.css">
     <title>Index</title>
 </head>
 
 <body>
 
-<header class="header">
-
-</header>
 
 <main class="s-main">
+
+<div class="intro-block">
+    
+    <div class="itnro-block__column">
+        <h1 class="intro-block__title">Поставщик Дальнего Востока</h1>
+        <p class="intro-block__text">Наши клиенты получают полный спектр услуг по работе с Китаем.Начиная с подбора производителя заканчивая доставкой товара до двери.Настолько прозрачных сделок с Китаем вы еще не осуществляли.
+        </p>
+        <a href="#" class="intro-block__link">Узнать больше</a>
+    </div>
+
+    <div class="intro-block__column">
+        <img src="img/intro-block.jpg" alt="" class="intro-block__image">
+    </div>
+
+</div>
 
    
 </main>
