--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div class="intro-block">
     
-    <div class="itnro-block__column">
+    <div class="intro-block__column">
         <h1 class="intro-block__title">Поставщик Дальнего Востока</h1>
         <p class="intro-block__text">Наши клиенты получают полный спектр услуг по работе с Китаем.Начиная с подбора производителя заканчивая доставкой товара до двери.Настолько прозрачных сделок с Китаем вы еще не осуществляли.
         </p>
@@ -22,7 +22,7 @@
     </div>
 
     <div class="intro-block__column">
-        <img src="img/intro-block.jpg" alt="" class="intro-block__image">
+        <img src="img/intro-block.png" alt="" class="intro-block__image">
     </div>
 
 </div>
