--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
 <main class="s-main">
 
 <div class="intro-block">
-    
-    <div class="intro-block__column">
-        <h1 class="intro-block__title">Поставщик Дальнего Востока</h1>
-        <p class="intro-block__text">Наши клиенты получают полный спектр услуг по работе с Китаем.Начиная с подбора производителя заканчивая доставкой товара до двери.Настолько прозрачных сделок с Китаем вы еще не осуществляли.
-        </p>
-        <a href="#" class="intro-block__link">Узнать больше</a>
-    </div>
 
-    <div class="intro-block__column">
-        <img src="img/intro-block.png" alt="" class="intro-block__image">
+    <div class="container">
+
+        <div class="intro-block__wrapper">
+            <div class="intro-block__column">
+                <h1 class="intro-block__title">Поставщик Дальнего Востока</h1>
+                <p class="intro-block__text">Наши клиенты получают полный спектр услуг по работе с Китаем.Начиная с подбора производителя заканчивая доставкой товара до двери.Настолько прозрачных сделок с Китаем вы еще не осуществляли.
+                </p>
+                <a href="#" class="intro-block__link">Узнать больше</a>
+            </div>
+            <div class="intro-block__column">
+                <img src="img/intro-block.png" alt="" class="intro-block__image">
+            </div>
+        </div>
     </div>
 
 </div>
