--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@600&family=PT+Sans:ital@0;1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Index</title>
 </head>
@@ -20,20 +23,41 @@
             
             <div class="intro-block__column">
                 <h1 class="intro-block__title">Поставщик Дальнего Востока</h1>
-                <p class="intro-block__text">Наши клиенты получают полный спектр услуг по работе с Китаем.Начиная с подбора производителя заканчивая доставкой товара до двери.Настолько прозрачных сделок с Китаем вы еще не осуществляли.
+                <p class="intro-block__text">Наши клиенты получают полный спектр услуг по работе с Китаем.<br>Начиная с подбора производителя заканчивая доставкой товара до двери. <br>Настолько прозрачных сделок с Китаем вы еще не осуществляли.
                 </p>
                 <a href="#" class="intro-block__link">Узнать больше</a>
             </div>
 
             <div class="intro-block__column">
-                <img src="img/intro-block.png" alt="" class="intro-block__image">
+                <img src="img/intro-block.png" alt="Грузовик" class="intro-block__image">
             </div>
         </div>
     </div>
 
 </div>
 
-   
+<div class="services-block">
+    <div class="container">
+        <div class="services-block__row">
+            <div class="services-block__card">
+                <img src="img/services-icon-1.png" alt="иконка сервиса" class="services-block__img">
+                <h4 class="services-block__title">Поиск производителей по товару</h4>
+                <p class="services-block__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod incididunt ut.</p>
+            </div>
+            <div class="services-block__card">
+                <img src="img/services-icon-2.png" alt="иконка сервиса" class="services-block__img">
+                <h4 class="services-block__title">Поиск конкретного производителя</h4>
+                <p class="services-block__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod incididunt ut.</p>
+            </div>
+            <div class="services-block__card">
+                <img src="img/services-icon-3.png" alt="иконка сервиса" class="services-block__img">
+                <h4 class="services-block__title">Доставка образцов товаров</h4>
+                <p class="services-block__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod incididunt ut.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
 </main>
 
 <footer class="footer">
