создал блок с голосованием, застрал на радио кнопках

--- a/index.html
+++ b/index.html
@@ -58,6 +58,56 @@
     </div>
 </div>
 
+<div class="votes-block">
+    <div class="container">
+        <h3 class="votes-block__title">В какой сфере вы работаете?</h3>
+        <p class="votes-block__text">Мы проводим опрос среди пользователей сайта, чтобы предоставить Вам информацию <br> соответствующую сфере Вашей деятельности.</p>
+        <div class="votes-block__row">
+            <div class="votes-block__column">
+                <label class="votes-block__card" for="numberOne">
+                    <div class="votes-block__card-custom-radio">
+                        <input type="radio" class="votes-block__card-radio" id="numberOne" value="1" name="radio">
+                    </div>
+                    <div class="votes-block__card-wrapper">
+                        <h4 class="votes-block__card-title">Я работаю на произвостве</h4>
+                        <p class="votes-block__card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </label>
+                <label class="votes-block__card" for="numberTwo">
+                    <div class="votes-block__card-custom-radio">
+                        <input type="radio" class="votes-block__card-radio" id="numberTwo" value="2" name="radio">
+                    </div>
+                    <div class="votes-block__card-wrapper">
+                        <h4 class="votes-block__card-title">Я работаю на произвостве</h4>
+                        <p class="votes-block__card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </label>
+                <label class="votes-block__card" for="numberThree">
+                    <div class="votes-block__card-custom-radio">
+                        <input type="radio" class="votes-block__card-radio" id="numberThree" value="3" name="radio">
+                    </div>
+                    <div class="votes-block__card-wrapper">
+                        <h4 class="votes-block__card-title">Я работаю на произвостве</h4>
+                        <p class="votes-block__card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    </div>
+                </label>
+                <!-- <div class="votes-block__card">
+                    <h4 class="votes-block__card-title">Я поставляю товары</h4>
+                    <p class="votes-block__card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                 </div>
+                 <div class="votes-block__card">
+                    <h4 class="votes-block__card-title">Я помогаю подобрать оборудование</h4>
+                    <p class="votes-block__card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                 </div> -->
+            </div>
+            <div class="votes-block__column">
+                <h6 class="votes-block__counter-title">Проголосовало:</h6>
+                <p class="votes-block__counter-text"> <span class="votes-block__counter">1107</span> пользователей</p>
+            </div>
+        </div>
+    </div>
+</div>
+
 </main>
 
 <footer class="footer">
