Доработал радио кнопки и доделал третий блок

--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
         <div class="votes-block__row">
             <div class="votes-block__column">
                 <label class="votes-block__card" for="numberOne">
-                    <div class="votes-block__card-custom-radio">
+                    <div class="votes-block__card-radio-wrapper">
                         <input type="radio" class="votes-block__card-radio" id="numberOne" value="1" name="radio">
+                        <span class="votes-block__card-custom-radio"></span>
                     </div>
                     <div class="votes-block__card-wrapper">
                         <h4 class="votes-block__card-title">Я работаю на произвостве</h4>
@@ -74,8 +75,9 @@
                     </div>
                 </label>
                 <label class="votes-block__card" for="numberTwo">
-                    <div class="votes-block__card-custom-radio">
-                        <input type="radio" class="votes-block__card-radio" id="numberTwo" value="2" name="radio">
+                    <div class="votes-block__card-radio-wrapper">
+                        <input type="radio" class="votes-block__card-radio" id="numberTwo" value="2" name="radio" checked>
+                        <span class="votes-block__card-custom-radio"></span>
                     </div>
                     <div class="votes-block__card-wrapper">
                         <h4 class="votes-block__card-title">Я работаю на произвостве</h4>
@@ -83,8 +85,9 @@
                     </div>
                 </label>
                 <label class="votes-block__card" for="numberThree">
-                    <div class="votes-block__card-custom-radio">
+                    <div class="votes-block__card-radio-wrapper">
                         <input type="radio" class="votes-block__card-radio" id="numberThree" value="3" name="radio">
+                        <span class="votes-block__card-custom-radio"></span>
                     </div>
                     <div class="votes-block__card-wrapper">
                         <h4 class="votes-block__card-title">Я работаю на произвостве</h4>
@@ -102,7 +105,7 @@
             </div>
             <div class="votes-block__column">
                 <h6 class="votes-block__counter-title">Проголосовало:</h6>
-                <p class="votes-block__counter-text"> <span class="votes-block__counter">1107</span> пользователей</p>
+                <p class="votes-block__counter-text"> <span class="votes-block__counter-number">1 107</span> пользователей</p>
             </div>
         </div>
     </div>
