сделал третий блок, оставил комментарий для второго блока о доработки

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
         </div>
     </div>
 </div>
-
+<!-- *****************************************************************************
+    Доделать бордер при выбраном инпуте, разместить справа снизу треугольник как на макете 
+**********************************************************************************-->
 <div class="votes-block">
     <div class="container">
         <h3 class="votes-block__title">В какой сфере вы работаете?</h3>
@@ -80,7 +82,7 @@
                         <span class="votes-block__card-custom-radio"></span>
                     </div>
                     <div class="votes-block__card-wrapper">
-                        <h4 class="votes-block__card-title">Я работаю на произвостве</h4>
+                        <h4 class="votes-block__card-title">Я поставляю товары</h4>
                         <p class="votes-block__card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                 </label>
@@ -90,22 +92,54 @@
                         <span class="votes-block__card-custom-radio"></span>
                     </div>
                     <div class="votes-block__card-wrapper">
-                        <h4 class="votes-block__card-title">Я работаю на произвостве</h4>
+                        <h4 class="votes-block__card-title">Я помогаю подобрать оборудование</h4>
                         <p class="votes-block__card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                 </label>
-                <!-- <div class="votes-block__card">
-                    <h4 class="votes-block__card-title">Я поставляю товары</h4>
-                    <p class="votes-block__card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                 </div>
-                 <div class="votes-block__card">
-                    <h4 class="votes-block__card-title">Я помогаю подобрать оборудование</h4>
-                    <p class="votes-block__card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                 </div> -->
             </div>
             <div class="votes-block__column">
                 <h6 class="votes-block__counter-title">Проголосовало:</h6>
                 <p class="votes-block__counter-text"> <span class="votes-block__counter-number">1 107</span> пользователей</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="advantages-block">
+    <div class="advantages-block__row">
+        <div class="container advantages-block__reset-container"><h3 class="advantages-block__title">Почему с нами выгоднее?</h3></div>
+    </div>
+    <div class="advantages-block__row">
+        <div class="container">
+            <div class="advantages-block__list">
+                <div class="advantages-block__item">
+                    <img src="img/advantage-1.png" alt="иконка зомка" class="advantages-block__item-img">
+                    <div class="advantages-block__item-text">
+                        <h6 class="advantages-block__item-title">Lorem ipsum dolor sit amet</h6>
+                        <p class="advantages-block__item-descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ut.</p>
+                    </div>
+                </div>
+                <div class="advantages-block__item">
+                    <img src="img/advantage-2.png" alt="иконка зомка" class="advantages-block__item-img">
+                    <div class="advantages-block__item-text">
+                        <h6 class="advantages-block__item-title">Lorem ipsum dolor sit amet</h6>
+                        <p class="advantages-block__item-descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ut.</p>
+                    </div>
+                </div>
+                <div class="advantages-block__item">
+                    <img src="img/advantage-3.png" alt="иконка зомка" class="advantages-block__item-img">
+                    <div class="advantages-block__item-text">
+                        <h6 class="advantages-block__item-title">Lorem ipsum dolor sit amet</h6>
+                        <p class="advantages-block__item-descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ut.</p>
+                    </div>
+                </div>
+                <div class="advantages-block__item">
+                    <img src="img/advantage-4.png" alt="иконка зомка" class="advantages-block__item-img">
+                    <div class="advantages-block__item-text">
+                        <h6 class="advantages-block__item-title">Lorem ipsum dolor sit amet</h6>
+                        <p class="advantages-block__item-descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ut.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
